# codexion

./: .env.new  .env.sample  .env.test  .eslintrc.json  .gitignore  cortex.ts  email.ts  install.sh  iprefiq.sh  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
apps/: .gitignore  config.json
apps/cortex/: index.html
apps/crm/: index.html
apps/cxsun/: index.html  theme.css
apps/devmeta/: README.md  __init__.py  provider.py  pyproject.toml  usage.md
apps/ecart/: index.html  theme.css
apps/erp/: index.html  theme.css
apps/global/: AppContaxt.tsx  useSettings.tsx
apps/mazsone/: index.html  theme.css
apps/ui/: index.html  theme.css
config/: api.cfg  app.cfg  apps.cfg  docker.cfg
corebase/: cod3e.py
corebase/codemaker/: dockit.py  init.py
cortex/: boot.py  config.py  container.py  lifecycle.py  main.py  main_old.py  services.py
cortex old/: main.py
cortex old/auth/: user.py
cortex old/controllers/: auth_controller.py
cortex old/core/: context.py  security.py  startup.py
cortex old/github/: git_update.py
cortex old/providers/: CacheServiceProvider.py  jwt_provider.py
cortex old/routes/: api.py
cortex/DTO/: dal.py  database.py
cortex/auth/: user_table.py
cortex/controllers/: auth_controller.py
cortex/core/: config.py  dataserve.py  db_init.py  di.py  jwt_handler.py  registry.py  security.py  settings.py  vite.py
cortex/database/: connection.py  migrate.py
cortex/db/: base_engine.py  engine_factory.py
cortex/github/: git_update.py
cortex/models/: token.py  user.py
cortex/providers/: CortexProvider.py  __init__.py  database_provider.py  logger_provider.py  migration_provider.py
cortex/routes/: api.py  web.py
cortex/runtime/: base_migration_list.py  bootstrap.py  service_providers.py
docker/: docker-compose-mariadb.yml  docker-compose-nginx.yml  docker-compose-site1_com.yml  erp-lifeshoppy-com.yml  erp-logicx-in.yml  erp-techmedia-co-in.yml  erp-tmnext-in.yml  init_frappe.py  smile-codexsun-com.yml  supervisord.conf
docker/certs/: fullchain.pem  privkey.pem
docker/cloud/: 50-server.cnf  51-server.cnf  Dockerfile  dev-software-com.yml  dev-sundar-com.yml  init_frappe.py  install_cortex.py  logicx-in.yml  mariadb-local.yml  site-aaranerp-com.yml  sundar-aaran-org.yml  tmnext-in.yml
docker/codexion/: Dockerfile
docker/core/: Dockerfile  build_run.py  cortex.yml  install.sh  production.md
docker/frappe/: Dockerfile  install_cortex.py  soft-aaran-org.yml  sundar-aaran-org.yml  supervisord.conf  update_env.py
docker/letsencrypt/: acme.json
docker/nginx/: nginx.conf
docs/: _index.yaml  add.md  architecture.md  clip.md  database.md  docker build usage.md  docker image commands.md  frontend.md  git command for codexfrap.md  index.md  local docker command.md  new codexfrap.md  new devops.md  new start.md  pycharm.md  techmedia.md  vite.md
docs/cli/: mariadb.md  new rnd.md  sys_install.md  techmedia.md
docs/cloud/: docker installation.md  nginx.md
docs/core/: 18-08-2025.md  _index.yaml  baselayer.md  new todo.md  scratch.md  todo.md  where we are.md
docs/get-started/: _index.yaml  endpoints.md  installation.md  overview.md
docs/guides/: _index.yaml  configuration.md  new1.md  new2.md  new3.md
docs/prefiq/: _index.yaml  architecture.md  database.md  overview.md  perfiq server.md  production mode.md  repository.md  runtime flow map.md  tasks.md  usage.md
docs/providers/: _index.yaml  database.md
docs/react/: _index.yaml  accordion.md
docs/review/: production mode.md
docs/scarb/: Project Summary.md  roadmap 1.md
docs/usage/: _index.yaml  usage.md
prefiq/: __init__.py  __main__.py  cli.py  icodexion.py  install.py  iprefiq.py  sys_init.sh
prefiq old/github/: git_sync.py
prefiq/abstracts/: __init__.py  model.py  page_controller.py  repository.py  rest_controller.py  service.py
prefiq/api/: app.py  health.py
prefiq/apps/: app_builder.py  app_cfg.py  app_scaffold.py  app_stubs.py  apps_cfg.py
prefiq/cli/: apps.py  cli.py  context.py  doctor.py  main.py  main_cli.py  providers.py
prefiq/commands/: install.py  (+4 more)
scripts/: smoke.py
tests/: conftest.py  test_dummy.py  test_generator.py
(+975 files in other folders)
