[project]
name = "codexion"
version = "0.1.0"
description = "codexion web App"
authors = [{ name = "Sundar", email = "aaransoftware@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
prefiq = "prefiq.cli.main_cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "cortex", "cortex.*",
    "apps", "apps.*",
    "prefiq", "prefiq.*"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
